--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack serve --open --config webpack.dev.js",
-    "deploy-init": "git branch gh-pages && git checkout gh-pages && git merge main --no-edit",
+    "deploy-init": "git branch gh-pages && git checkout gh-pages && git merge main --no-edit && npm run build",
     "deploy": "git add dist -f && git commit -m 'Deployment commit' && git subtree push --prefix dist origin gh-pages && git checkout main"
   },
   "repository": {
